trial for the Gtk gui package

--- a/Tutorials/function defining.ipynb
+++ b/Tutorials/function defining.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "qadratic2 (generic function with 1 method)"
+       "quadratic2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
     "end\n",
     "# functions can also be defined more succinctly\n",
     "quadratic(a, sqr_term, b) = (-b + sqr_term)/ 2a\n",
-    "function qadratic2(a::Float64, b::Float64, c::Float64)\n",
+    "function quadratic2(a::Float64, b::Float64, c::Float64)\n",
     "    sqr_term = sqrt(b^2-4a*c)\n",
     "    r1 = quadratic(a, sqr_term, b)\n",
     "    r2 = quadratic(a, -sqr_term, b)\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "523.5987755982989"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "4188.790204786391"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "4.1887902047863905"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,23 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: quadratic2 not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: quadratic2 not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[6]:1"
-     ]
+     "data": {
+      "text/plain": [
+       "(3.0, 2.0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "quadratic2(1,5,6)"
+    "quadratic2(1.0,-5.0,6.0)"
    ]
   },
   {
@@ -121,16 +120,20 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
-   "display_name": "Julia 1.2.0",
+   "display_name": "Julia 1.4.2",
    "language": "julia",
-   "name": "julia-1.2"
+   "name": "julia-1.4"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.2.0"
+   "version": "1.4.2"
   }
  },
  "nbformat": 4,
